cargo-features = ["edition2024"]

[package]
name = "portly"
version = "0.1.0"
edition = "2024"
authors = ["Oscar Bréhier <brehieroscar@gmail.com>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
thiserror = "1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
